[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ghost.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 30.0315

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.8123, 33.0131 )

[node name="Ghost" type="KinematicBody2D" groups=[
"Ghost",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="EscapeTimer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="EscapeTimer" to="." method="_on_EscapeTimer_timeout"]
